--- a/templates/sortie/listSorties.html.twig
+++ b/templates/sortie/listSorties.html.twig
@@ -17,7 +17,7 @@
             <div>
                 Le nom de la sortie contient : <input type="text" class="form-control" id="nom" placeholder="Rechercher" onkeyup="filtrer()">
             </div>
-            <div>
+            <div class="col-6">
                 Entre le <input type="date" id="datePremiere" onchange="filtrer()" class="form-control">  Et le <input type="date" id="dateSeconde" onchange="filtrer()" class="form-control">
             </div>
             </div>
