--- a/templates/sortie/listSorties.html.twig
+++ b/templates/sortie/listSorties.html.twig
@@ -80,7 +80,7 @@
                             <a  href="" id="btnSedesister" class="c btn btn-light">Se Désister</a>
                                 </div>
                                 <div class="col-3">
-                            <a  href="" id="btnModifierSortie" class="  btn btn-light">Modifier</a>
+                            <a  href="" id="btnModifierSortie" class="  btn btn-light cacher">Modifier</a>
                                 </div>
                                 <div class="col-3">
                             <a  href="" id="btnAfficher" class="btn btn-light">Afficher</a>
