--- a/templates/main/home.html.twig
+++ b/templates/main/home.html.twig
@@ -4,7 +4,7 @@
     <div class="container">
         <div class="row">
             <div class="offset-2 col-8">
-                <img class="col-12" src="{{ asset('img/header-tours-evenements.jpg') }}" style="margin-top: 30px " alt="photo accueil">
+                <a href="{{ path('sortie_listSorties') }}"><img class="col-12" src="{{ asset('img/header-tours-evenements.jpg') }}" style="margin-top: 30px; border-radius: 20px; " alt="photo accueil" ></a>
                 <h3 style="margin-left: 95px">Bienvenue sur le 1er site Français d'évenements</h3>
             </div>
         </div>
