--- a/templates/sortie/listSorties.html.twig
+++ b/templates/sortie/listSorties.html.twig
@@ -48,11 +48,11 @@
                                     <th class="col-2">Nom de la sortie</th>
                                     <th class="col-2">Date de la sortie</th>
                                     <th>Clôture</th>
-                                    <th>inscrits/places</th>
+                                    <th>Inscrits/Places</th>
                                     <th>Etat</th>
                                     <th>Inscrit</th>
                                     <th>Organisateur</th>
-                                    <th class="col-5">Action</th>
+                                    <th class="col-5">Actions</th>
                                 </tr>
                                 </thead>
                                     <tbody id="myTbody">
