--- a/templates/profil/monprofil.html.twig
+++ b/templates/profil/monprofil.html.twig
@@ -1,5 +1,7 @@
 {% extends 'base.html.twig' %}
 
+{% block title %} {{ parent() }} | Mon Profil {% endblock %}
+
 {% block contenu %}
 
     <div style="display: flex; justify-content: flex-start; margin-top:90px;margin-left:80px;border-radius:10px;height:250px;width:200px">
