--- a/templates/sortie/afficherSortie.html.twig
+++ b/templates/sortie/afficherSortie.html.twig
@@ -1,5 +1,7 @@
 {% extends "base.html.twig" %}
 
+{% block title %} {{ parent() }} | Détail {% endblock %}
+
 {% block contenu %}
     <div class="container">
         <h2>Afficher une sortie</h2>
