--- a/templates/sortie/creerSortie.html.twig
+++ b/templates/sortie/creerSortie.html.twig
@@ -1,5 +1,7 @@
 {% extends "base.html.twig" %}
 
+{% block title %} {{ parent() }} | Nouvelle sortie {% endblock %}
+
 {% block contenu %}
 
     <div class="offset-4 col-8">
