--- a/templates/sortie/modifierSortie.html.twig
+++ b/templates/sortie/modifierSortie.html.twig
@@ -1,4 +1,7 @@
 {% extends "base.html.twig" %}
+
+{% block title %} {{ parent() }} | Modifier Sortie {% endblock %}
+
 {% block contenu %}
     <div id="formulaireModifierSortie" class="offset-4 col-6">
         <h2>Modifier la sortie</h2>
